<resources>
    <string name="app_name">Teleport43</string>
    <string name="help_short_text">App not works - please click this first</string>
    <string name="help_title">Because of red alerts the App is not works properly. Please fix it all to let App can work correctly</string>
    <string name="help_1">GPS must be ON</string>
    <string name="help_2">Teleport43 must be set as Mock location provider in Phone ->Settings ->System ->For Developers</string>
    <string name="help_3">Google Geolocation must be OFF</string>
    <string name="help_4">All requested permissions has been granted</string>
    <string name="cancel">Cancel</string>
    <string name="import_cap">Import</string>
    <string name="save">Save</string>
    <string name="new_item">New Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="no_mock">Teleport43 not set as default mock location provider. Please fill full checklist and restart the app</string>
    <string name="one_or_more_points_defined_by_its_coordinates_in_format_lat1_long1_lat2_long2">One or more points defined by its coordinates in format: LAT1,LONG1;LAT2,LONG2...</string>
    <string name="string_default">DEFAULT</string>
</resources>